Fix spacing

--- a/styles/orders.scss
+++ b/styles/orders.scss
@@ -25,6 +25,10 @@ article .new-order-article {
   justify-content: center;
 }
 
+label {
+  margin-top: 5px;;
+}
+
 .accept-order.btn {
   background-color: #f3b4e3;
   border-radius: 8px;
